Fix second scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 .CharactersSection {
-  overflow-y: scroll;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
